Changed recommended mappings (variation ID)

--- a/docs/de-de/modules/maerkte/pages/basic-price-search-engine.adoc
+++ b/docs/de-de/modules/maerkte/pages/basic-price-search-engine.adoc
@@ -346,5 +346,5 @@ include::partial$catalogue-change-from-elastic-export.adoc[]
 | Grundpreis: Menge
 
 |variation_id
-| Varianten-ID
+| Externe Produkt-ID
 |====
