--- a/docs/de-de/modules/maerkte/pages/billiger-de.adoc
+++ b/docs/de-de/modules/maerkte/pages/billiger-de.adoc
@@ -266,7 +266,7 @@ include::partial$catalogue-change-from-elastic-export.adoc[]
 |Spalte im elastischen Export |Datenfeld im Katalog
 
 | aid
-| SKU
+| Externe Produkt-ID
 
 | brand
 | Hersteller
