--- a/docs/de-de/modules/maerkte/pages/criteo.adoc
+++ b/docs/de-de/modules/maerkte/pages/criteo.adoc
@@ -347,7 +347,7 @@ include::partial$catalogue-change-from-elastic-export.adoc[]
 |Spalte im elastischen Export |Datenfeld im Katalog
 
 | id
-| SKU
+| Externe Produkt-ID
 
 | title
 | Produktname
