--- a/docs/de-de/modules/maerkte/pages/geizhals-de.adoc
+++ b/docs/de-de/modules/maerkte/pages/geizhals-de.adoc
@@ -177,7 +177,7 @@ include::partial$catalogue-change-from-elastic-export.adoc[]
 | Herstellername
 
 | Produktcode
-| Produktcode
+| Externe Produkt-ID
 
 | Produktbezeichnung
 | Produktbezeichnung
