--- a/docs/de-de/modules/maerkte/pages/tracdelight.adoc
+++ b/docs/de-de/modules/maerkte/pages/tracdelight.adoc
@@ -215,7 +215,7 @@ include::partial$catalogue-change-from-elastic-export.adoc[]
 |Spalte im elastischen Export |Datenfeld im Katalog
 
 | Artikelnummer
-| SKU
+| Externe Produkt-ID
 
 | Produkttitel
 | Titel
@@ -257,7 +257,7 @@ include::partial$catalogue-change-from-elastic-export.adoc[]
 | Lieferzeit
 
 | Produktstamm-ID
-| Varianten-ID
+| Artikel-ID
 
 | EAN
 | GTIN
