--- a/docs/de-de/modules/maerkte/partials/awin-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/awin-recommended-mappings.adoc
@@ -16,10 +16,9 @@
 | ja
 | * *Variante » Ceres Produkt-URL*
 
-| Produkt-ID
+| Externe Produkt-ID
 | ja
-|* *SKU » SKU* +
-*_Tipp:_* Wähle die Auftragsherkunft *{market}*. Gib in das Feld *Konto* die Zahl `0` ein.
+| * *Variante » Varianten-ID*
 
 | Produktname
 | ja
