--- a/docs/de-de/modules/maerkte/partials/basicpricesearchengine-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/basicpricesearchengine-recommended-mappings.adoc
@@ -105,6 +105,6 @@ _oder_
 | Grundpreis: Menge
 | * *Grundpreis » Anzahl » [Denselben Verkaufspreis wie für Datenfeld "Preis" wählen]*
 
-| Varianten-ID
+| Externe Produkt-ID
 | * *Variante » Varianten-ID*
 |====
