--- a/docs/de-de/modules/maerkte/partials/criteo-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/criteo-recommended-mappings.adoc
@@ -3,9 +3,9 @@
 |====
 |Marktplatz-Feld |Pflicht? |Empfohlene plentymarkets Zuordnung
 
-| SKU
+| Externe Produkt-ID
 | ja
-| * *SKU* der Variante für Criteo
+| * *Variante » Varianten-ID*
 
 | Produktname
 | ja
