--- a/docs/de-de/modules/maerkte/partials/econda-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/econda-recommended-mappings.adoc
@@ -3,7 +3,7 @@
 |====
 |Marktplatz-Feld |Pflicht? |Empfohlene plentymarkets Zuordnung
 
-| Varianten-ID
+| Externe Produkt-ID
 | ja
 | * *Variante » Varianten-ID*
 
