--- a/docs/de-de/modules/maerkte/partials/kelkoo-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/kelkoo-recommended-mappings.adoc
@@ -3,10 +3,9 @@
 |====
 |Marktplatz-Feld|Pflicht? |Empfohlene plentymarkets Zuordnung
 
-| Angebot-ID
+| Externe Produkt-ID
 | ja
-|* *SKU » SKU* +
-*_Tipp:_* Wähle die Auftragsherkunft *Kelkoo*. Gib in das Feld *Konto* die Zahl `0` ein.
+|* *Variante » Varianten-ID*
 
 | Titel
 | ja
