--- a/docs/de-de/modules/maerkte/partials/tracdelight-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/tracdelight-recommended-mappings.adoc
@@ -3,10 +3,9 @@
 |====
 |Marktplatz-Feld|Pflicht? |Empfohlene plentymarkets Zuordnung
 
-| SKU
+| Externe Produkt-ID
 | ja
-|* *SKU » SKU* +
-*_Tipp:_* Wähle die Auftragsherkunft *{market}*. Gib in das Feld *Konto* die Zahl `0` ein.
+|* *Variante » Varianten-ID*
 
 | Titel
 | ja
@@ -81,9 +80,9 @@ _oder_
 | nein
 | * *Variante » Verfügbarkeit*
 
-| Varianten-ID
+| Artikel-ID
 | nein
-| * *Variante » Varianten-ID*
+| * *Artikel » Artikel-ID*
 
 | GTIN
 | nein
