--- a/docs/de-de/modules/maerkte/partials/twenga-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/twenga-recommended-mappings.adoc
@@ -98,7 +98,8 @@ _oder_
 | * *Artikel » Herstellername*
 
 | Varianten-ID
-| ja
-| * *Variante » Varianten-ID*
+| 
+| Dieses Datenfeld wird automatisch zugeordnet.
+// Wird für interne Zwecke genutzt, z.B. um die Variante bei Fehlern im Log zuordnen zu können oder wenn andere Felder nicht zugeordnet sind.
 
 |====
