--- a/docs/en-gb/modules/markets/pages/beezup.adoc
+++ b/docs/en-gb/modules/markets/pages/beezup.adoc
@@ -230,7 +230,7 @@ include::partial$catalogue-change-from-elastic-export.adoc[]
 |Column in elastic export |Data field in catalogue
 
 | Produkt ID
-| Variation ID
+| External product ID
 
 | Artikel Nr
 | Variation number
