--- a/docs/en-gb/modules/markets/pages/billiger-de.adoc
+++ b/docs/en-gb/modules/markets/pages/billiger-de.adoc
@@ -266,7 +266,7 @@ include::partial$catalogue-change-from-elastic-export.adoc[]
 |Column in elastic export |Data field in catalogue
 
 | aid
-| SKU
+| External product ID
 
 | brand
 | Manufacturer
