--- a/docs/en-gb/modules/markets/pages/criteo.adoc
+++ b/docs/en-gb/modules/markets/pages/criteo.adoc
@@ -343,7 +343,7 @@ include::partial$catalogue-change-from-elastic-export.adoc[]
 |Column in elastic export |Data field in catalogue
 
 | id
-| SKU
+| External product ID
 
 | title
 | Product name
