--- a/docs/en-gb/modules/markets/pages/tracdelight.adoc
+++ b/docs/en-gb/modules/markets/pages/tracdelight.adoc
@@ -215,7 +215,7 @@ include::partial$catalogue-change-from-elastic-export.adoc[]
 |Column in elastic export |Data field in catalogue
 
 | Item number
-| SKU
+| External product ID
 
 | Produkttitel
 | Title
@@ -257,7 +257,7 @@ include::partial$catalogue-change-from-elastic-export.adoc[]
 | Delivery time
 
 | Produktstamm-ID
-| Variation ID
+| Item ID
 
 | EAN
 | GTIN
