--- a/docs/en-gb/modules/markets/partials/econda-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/econda-recommended-mappings.adoc
@@ -3,7 +3,7 @@
 |====
 |Marketplace field |Mandatory? |Recommended plentymarkets mapping
 
-| Variation ID
+| External product ID
 | yes
 | * *Variation » Variation ID*
 
