--- a/docs/en-gb/modules/markets/partials/kelkoo-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/kelkoo-recommended-mappings.adoc
@@ -3,10 +3,9 @@
 |====
 |Marketplace field|Mandatory? |Recommended plentymarkets mapping
 
-| SKU
+| External product ID
 | yes
-|* *SKU » SKU* +
-*_Tip:_* Select the order referrer *Kelkoo*. In the field *Account*, enter the number `0`.
+|* *Variation » Variation ID*
 
 | Title
 | yes
