--- a/docs/de-de/modules/maerkte/pages/beezup.adoc
+++ b/docs/de-de/modules/maerkte/pages/beezup.adoc
@@ -230,7 +230,7 @@ include::partial$catalogue-change-from-elastic-export.adoc[]
 |Spalte im elastischen Export |Datenfeld im Katalog
 
 | Produkt ID
-| Varianten-ID
+| Externe Produkt-ID
 
 | Artikel Nr
 | Variantennummer
