--- a/docs/de-de/modules/maerkte/pages/econda.adoc
+++ b/docs/de-de/modules/maerkte/pages/econda.adoc
@@ -171,7 +171,7 @@ include::partial$catalogue-change-from-elastic-export.adoc[]
 |Spalte im elastischen Export |Datenfeld im Katalog
 
 | Id
-| Varianten-ID
+| Externe Produkt-ID
 
 | Produktname
 | Artikelname
