--- a/docs/de-de/modules/maerkte/partials/beezup-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/beezup-recommended-mappings.adoc
@@ -4,7 +4,7 @@
 |====
 |Marktplatz-Feld |Pflicht? |Empfohlene plentymarkets Zuordnung
 
-| Varianten-ID
+| Externe Produkt-ID
 | ja
 | * *Variante » Varianten-ID*
 
