--- a/docs/de-de/modules/maerkte/partials/billiger-de-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/billiger-de-recommended-mappings.adoc
@@ -3,10 +3,9 @@
 |====
 |Marktplatz-Feld |Pflicht? |Empfohlene plentymarkets Zuordnung
 
-| SKU
+| Externe Produkt-ID
 | ja
-| * *SKU* der Variante für billiger.de +
-*_Tipp:_* Wähle die Auftragsherkunft *billiger.de* und gib in das Feld *Konto* die Zahl `0` ein.
+| * *Variante » Varianten-ID*
 
 | Hersteller
 | ja
@@ -186,8 +185,8 @@ _oder:_
 
 * *Bestand »* 1 oder mehrere Lager
 
-
 | Variantennummer
-| nein
-| *Variante » Varianten-ID*
+| 
+| Dieses Datenfeld wird automatisch zugeordnet.
+// Wird für interne Zwecke genutzt, z.B. um die Variante bei Fehlern im Log zuordnen zu können oder wenn andere Felder nicht zugeordnet sind.
 |====
