--- a/docs/en-gb/modules/markets/pages/awin.adoc
+++ b/docs/en-gb/modules/markets/pages/awin.adoc
@@ -187,7 +187,7 @@ include::partial$catalogue-change-from-elastic-export.adoc[]
 |Column in elastic export |Data field in catalogue
 
 | prod_number
-| Product ID
+| External product ID
 
 | prod_name
 | Product name
