--- a/docs/en-gb/modules/markets/pages/econda.adoc
+++ b/docs/en-gb/modules/markets/pages/econda.adoc
@@ -171,7 +171,7 @@ include::partial$catalogue-change-from-elastic-export.adoc[]
 |Column in elastic export |Data field in catalogue
 
 | Id
-| Variation ID
+| External product ID
 
 | Product name
 | Item name
