--- a/docs/en-gb/modules/markets/partials/beezup-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/beezup-recommended-mappings.adoc
@@ -4,7 +4,7 @@
 |====
 |Marketplace field |Mandatory? |Recommended plentymarkets mapping
 
-| Variation ID
+| External product ID
 | yes
 | * *Variation » Variation ID*
 
