--- a/docs/en-gb/modules/markets/partials/tracdelight-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/tracdelight-recommended-mappings.adoc
@@ -3,10 +3,9 @@
 |====
 |Marketplace field|Mandatory? |Recommended plentymarkets mapping
 
-| SKU
+| External product ID
 | yes
-|* *SKU » SKU* +
-*_Tip:_* Select the order referrer *{market}*. In the field *Account*, enter the number `0`.
+|* *Variation » Variation ID*
 
 | Title
 | yes
@@ -81,9 +80,9 @@ _or_
 | no
 | * *Variation » Availability*
 
-| Variation ID
+| Item ID
 | no
-| * *Variation » Variation ID*
+| * *Item » Item ID*
 
 | GTIN
 | no
