CHANGE formatting so that the files will be easier to deal with in memsource

--- a/docs/de-de/modules/warenwirtschaft/pages/properties.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/properties.adoc
@@ -37,32 +37,36 @@ Erstelle zuerst alle nötigen Gruppen, z.B. die Gruppe "Lager Berlin".
 
 //#GIF#
 
+---
+
 ==== Details
 
-[cols="1,4a"]
+[cols="1s,4a"]
 |===
 |Einstellung |Erläuterung
 
-| *ID*
+| ID
 |Sobald du die Gruppe erstmalig gespeichert hast, erhält sie automatisch eine fortlaufende und einzigartige ID.
 Die ID kann nicht geändert werden.
 
-| *Position*
+| Position
 |Gib eine Positionsnummer für die Eigenschaftsgruppe ein.
 Standardmäßig wird aufsteigend nach Positionsnummer sortiert.
 Wenn ein Lagerort Eigenschaften aus mehreren Gruppen hat, werden die Gruppen aufsteigend dargestellt.
 
 *_Tipp_*: Speichere die Positionsnummern in 10er-Schritten, damit du mögliche neue Eigenschaftsgruppen dazwischen einfügen kannst.
 
-| *Gruppentyp*
+| Gruppentyp
 |Diese Option ist nicht für Lagerort-Eigenschaften relevant.
 Sie ist für einen anderen Anwendungsfall gedacht: nämlich für xref:artikel:personalisierte-artikel.adoc#[Bestelleigenschaften vom Typ Kein].
 
-| *Aufpreistyp*
+| Aufpreistyp
 |Diese Option ist nicht für Lagerort-Eigenschaften relevant.
 Sie ist für einen anderen Anwendungsfall gedacht: nämlich für xref:artikel:personalisierte-artikel.adoc#[Bestelleigenschaften].
 
 |===
+
+---
 
 ==== Namen
 
@@ -151,6 +155,8 @@ Erstelle die Eigenschaften, die du zur Charakterisierung deiner Lagerorte verwen
 
 //#GIF#
 
+---
+
 [#62]
 ==== Details
 
@@ -212,6 +218,8 @@ Standardmäßig wird aufsteigend nach Positionsnummer sortiert.
 *_Tipp_*: Speichere die Positionsnummern in 10er-Schritten, damit du mögliche neue Eigenschaften dazwischen einfügen kannst.
 |===
 
+---
+
 [#64]
 ==== Namen
 
@@ -239,6 +247,8 @@ Standardmäßig wird aufsteigend nach Positionsnummer sortiert.
 . Gib Übersetzungen für den Namen und die Beschreibung ein.
 |===
 
+---
+
 [#66]
 ==== Auswahlwerte
 
@@ -264,6 +274,8 @@ Der Wert erhält automatisch eine fortlaufende und einzigartige ID, die nicht ge
 . Soll der Auswahlwert-Name in mehreren Sprachen verfügbar sein?
 Dann klicke auf den Wert, um eine Detailansicht zu öffnen.
 Dort kannst du Übersetzungen und Beschreibungen für den Wert eingeben.
+
+---
 
 [#68]
 ==== Gruppen
