Changed recommended mappings for price search engines (#451)
* Changed recommended mappings (variation ID)

* Format corrections

--- a/docs/de-de/modules/maerkte/partials/tracdelight-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/tracdelight-recommended-mappings.adoc
@@ -3,14 +3,13 @@
 |====
 |Marktplatz-Feld|Pflicht? |Empfohlene plentymarkets Zuordnung
 
-| SKU
+| Externe Produkt-ID
 | ja
-|* *SKU » SKU* +
-*_Tipp:_* Wähle die Auftragsherkunft *{market}*. Gib in das Feld *Konto* die Zahl `0` ein.
+| * *Variante » Varianten-ID*
 
 | Titel
 | ja
-|* *Artikeltext » Name 1*
+| * *Artikeltext » Name 1*
 
 _oder_
 
@@ -81,9 +80,9 @@ _oder_
 | nein
 | * *Variante » Verfügbarkeit*
 
-| Varianten-ID
+| Artikel-ID
 | nein
-| * *Variante » Varianten-ID*
+| * *Artikel » Artikel-ID*
 
 | GTIN
 | nein
