add info about newsletter folder for cleverreach

--- a/docs/de-de/modules/crm/pages/newsletter-versenden.adoc
+++ b/docs/de-de/modules/crm/pages/newsletter-versenden.adoc
@@ -508,6 +508,12 @@ Deine Domain findest du im Menü *Einrichtung » Mandant » [Mandant wählen] »
 
 Gehe wie im Folgenden beschrieben vor, um deine Newsletter mit link:https://www.cleverreach.de/[CleverReach^] an deine Kund:innen zu versenden.
 
+[TIP]
+.Export zu CleverReach greift auf Ordner mit ID 2 zu
+====
+*_Beachte:_* Der Export zu CleverReach greift automatisch auf den Newsletter-E-Mail-Ordner mit der ID 2 im Menü *Einrichtung » CRM » Newsletter » plentymarkets » E-Mail-Ordner* zu. 
+====
+
 [#1800]
 === Bei CleverReach registrieren
 
@@ -517,6 +523,12 @@ Registriere dich kostenlos auf der link:https://www.cleverreach.de/[Website von 
 === CleverReach in plentymarkets einrichten
 
 Gehe wie im Folgenden beschrieben vor, um die Schnittstelle zu CleverReach in plentymarkets einzurichten.
+
+[TIP]
+.Export zu CleverReach greift auf Ordner mit ID 2 zu
+====
+*_Beachte:_* Der Export zu CleverReach greift automatisch auf den Newsletter-E-Mail-Ordner mit der ID 2 im Menü *Einrichtung » CRM » Newsletter » plentymarkets » E-Mail-Ordner* zu. 
+====
 
 [.instruction]
 CleverReach in plentymarkets einrichten:
@@ -577,6 +589,12 @@ Wenn du nicht allen Kund:innen schreiben möchtest, deren Daten du zu CleverReac
 === Daten manuell übertragen
 
 Mit der Option *Datenübertragung ausführen* werden nur die Daten eines bestimmten Kundentyps übertragen. Dies bietet die Möglichkeit, die Kundentypen in separate Gruppen bei CleverReach einzuordnen.
+
+[TIP]
+.Export zu CleverReach greift auf Ordner mit ID 2 zu
+====
+*_Beachte:_* Der Export zu CleverReach greift automatisch auf den Newsletter-E-Mail-Ordner mit der ID 2 im Menü *Einrichtung » CRM » Newsletter » plentymarkets » E-Mail-Ordner* zu. 
+====
 
 [IMPORTANT]
 .Automatische Übertragung sinnvoll?
