--- a/docs/de-de/modules/crm/pages/op-liste.adoc
+++ b/docs/de-de/modules/crm/pages/op-liste.adoc
@@ -9,7 +9,7 @@ Im Menü *CRM » OP-Liste* erhältst du eine Übersicht über offene Posten. All
 [#vorbereitende-einstellungen]
 == Vorbereitende Einstellungen
 
-Im Menü *Einrichtung » CRM » Einstellungen* wählst du Standardeinstellungen für die xref:crm:op-liste.adoc#filtern[Suchfilter] der Offenen Posten-Tabelle. Beachte dazu die Erläuterungen in <<#table-default-settings-filters-ar-list>>.
+Im Menü *Einrichtung » CRM » Buchhaltung » Einstellungen* wählst du Standardeinstellungen für die xref:crm:op-liste.adoc#filtern[Suchfilter] der Offenen Posten-Tabelle. Beachte dazu die Erläuterungen in <<#table-default-settings-filters-ar-list>>.
 
 [[table-default-settings-filters-ar-list]]
 .Filtereinstellungen Offene Posten
