update default templates and icons

--- a/docs/en-gb/modules/crm/pages/emailbuilder.adoc
+++ b/docs/en-gb/modules/crm/pages/emailbuilder.adoc
@@ -369,10 +369,10 @@ The list contains all <<#create-footer, footers>> that you have already created.
 //|In which area should the email template be available? Select a type from the drop-down list.
 
 |[#intable-template-settings-static-attachments]*Select static attachments*
-|This drop-down list provides all attachments that you uploaded before in the *CMS » Documents* menu. These are, for example, installation guides or product data sheets. Select (icon:check_box[set=material]) up to 3 static attachments from the drop-down list.
+|This drop-down list provides all attachments that you uploaded before in the *CMS » Documents* menu. These are, for example, installation guides or product data sheets. Select (icon:check_box[set=material, role=skyBlue]) up to 3 static attachments from the drop-down list.
 
 |[#intable-template-settings-dynamic-attachments]*Select dynamic attachments*
-|This drop-down list provides all xref:orders:order-documents.adoc#100[location-based documents] that you set up in the *Setup » Client » [Select client] » Locations » [Select location] » Documents* menu. Select (icon:check_box[set=material]) up to 3 dynamic attachments from the drop-down list.
+|This drop-down list provides all xref:orders:order-documents.adoc#100[location-based documents] that you set up in the *Setup » Client » [Select client] » Locations » [Select location] » Documents* menu. Select (icon:check_box[set=material, role=skyBlue]) up to 3 dynamic attachments from the drop-down list.
 
 |[#intable-template-settings-subject]*Subject*
 |What’s the subject of your email?
@@ -588,25 +588,25 @@ Would you like to know which default templates are already available in the Emai
 |English template |Subject
 
 |Order: Changes
-|Change to your order with ID {⁠{order.id}⁠}
+|Change to your order with ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
 
 |Order: Partial payment received
-|Partial payment for order ID {⁠{order.id}⁠} received
+|Partial payment for order ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125; received
 
 |Order: Shipping confirmation
-|Shipping confirmation for your order with ID {⁠{order.id}⁠}
+|Shipping confirmation for your order with ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
 
 |Order: Payment complete
-|Payment for order ID {⁠{order.id}⁠} fully received
+|Payment for order ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125; fully received
 
 |eBay: dispute / cancellation, no payment
-|Your order with the ID {⁠{order.id}⁠} was cancelled
+|Your order with the ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125; was cancelled
 
 |eBay: Order confirmation
-|eBay auction won: Order ID {⁠{order.id}⁠}
+|eBay auction won: Order ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
 
 |eBay: Order confirmation with bank details without checkout
-|Order confirmation for your eBay order with the ID {⁠{order.id}⁠}
+|Order confirmation for your eBay order with the ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
 
 |Shop: New password
 |Your requested login details for our online shop
@@ -615,7 +615,7 @@ Would you like to know which default templates are already available in the Emai
 |Confirmation of newsletter registration
 
 |Shop: Order confirmation
-|Order confirmation for your order with ID {⁠{order.id}⁠}
+|Order confirmation for your order with ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
 
 |====
 
@@ -628,25 +628,25 @@ Would you like to know which default templates are already available in the Emai
 |German template |Subject
 
 |Auftrag: Änderung
-|Auftragsänderung Ihrer Bestellung mit der ID {⁠{order.id}⁠}
+|Auftragsänderung Ihrer Bestellung mit der ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
 
 |Auftrag: Teilzahlung erhalten
-|Teilzahlung für Auftrags-ID {⁠{order.id}⁠} erhalten
+|Teilzahlung für Auftrags-ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125; erhalten
 
-|Order: Shipping confirmation
-|Versandbestätigung für Ihre Bestellung mit der ID {⁠{order.id}⁠}
+|Auftrag: Versandbestätigung
+|Versandbestätigung für Ihre Bestellung mit der ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
 
 |Auftrag: Zahlungseingang vollständig
-|Zahlung für Auftrag {⁠{order.id}⁠} vollständig erhalten
+|Zahlung für Auftrag &#123;&#8288;&#123;order.id&#125;&#8288;&#125; vollständig erhalten
 
 |eBay: Disput / Storno, keine Zahlung
-|Ihre Bestellung mit der ID {⁠{order.id}⁠} wurde storniert
+|Ihre Bestellung mit der ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125; wurde storniert
 
 |eBay: Eingangsbestätigung Bestellung
-|eBay-Auktion gewonnen: Auftrags-ID {⁠{order.id}⁠}
+|eBay-Auktion gewonnen: Auftrags-ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
 
 |eBay: Eingangsbestätigung mit Bankdaten ohne Checkout
-|Eingangsbestätigung zum eBay-Auftrag mit der ID {⁠{order.id}⁠}
+|Eingangsbestätigung zum eBay-Auftrag mit der ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
 
 |Shop: Neues Passwort
 |Ihre angeforderten Zugangsdaten zu unserem Webshop
@@ -655,7 +655,7 @@ Would you like to know which default templates are already available in the Emai
 |Bestätigung zur Newsletter-Anmeldung
 
 |Shop: Eingangsbestätigung Bestellung
-|Auftragsbestätigung für Auftrags-ID {⁠{order.id}⁠}
+|Auftragsbestätigung für Auftrags-ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
 
 |====
 
