--- a/docs/en-gb/modules/crm/pages/emailbuilder.adoc
+++ b/docs/en-gb/modules/crm/pages/emailbuilder.adoc
@@ -1,5 +1,5 @@
 = EmailBuilder (Test phase)
-:keywords: EmailBuilder, E-Mail Builder, E-Mail templates, email templates, Widgets, attach documents email, document attachment email, construction kit email templates, email variables, e-mail variables, twig expressions, email despatch, code widget
+:keywords: EmailBuilder, Email Builder, email templates, widgets, e-mail templates, document attachment email, attach documents email, construction kit emails, email variables, twig expressions, email despatch, code widget
 :description: Learn how to use the EmailBuilder in plentymarkets.
 :page-aliases: emailbuilder-testphase.adoc
 :id: MYFLVYO
@@ -11,14 +11,19 @@
 On this page, we will present you the functions of the new EmailBuilder. The EmailBuilder is continuously being developed further; more functions and features will be added. In the course of development, also this page of the user manual will be completed step-by-step.
 ====
 
-All emails that are sent with plentymarkets are based on templates. You create and manage templates with the EmailBuilder in the *CRM » EmailBuilder (Test phase)* menu. The email templates in the EmailBuilder use the multipart format which has the advantage that the emails are sent in an HTML and in a text version at the same time. 
+All emails that are sent with plentymarkets to your xref:crm:contacts.adoc#[contacts] are based on templates. You create and manage templates with the EmailBuilder in the *CRM » EmailBuilder (Test phase)* menu. The email templates in the EmailBuilder use the multipart format which has the advantage that the emails are sent in an HTML and in a text version at the same time.
 
-The EmailBuilder is a modular construction kit for quickly creating and editing your email templates via drag-and-drop. The EmailBuilder consists of 2 views: the configuration manager and the editor. With the configuration manager, you create folders and, if needed, sub-folders, templates as well as templates for your footer and your header. With the editor, you fill your templates, headers and footers with content. You can create a template for an invoice, for example, and use this template for all invoices that are sent to your customers in the future. +
+The EmailBuilder is a modular construction kit for quickly creating and editing your email templates via drag-and-drop. The EmailBuilder consists of 2 views: the configuration manager and the editor.
+
+* With the configuration manager, you create folders and, if needed, sub-folders, templates as well as templates for your footer and your header. 
+
+* With the editor, you fill your templates, headers and footers with content. You can create a template for an invoice, for example, and use this template for all invoices that are sent to your customers in the future.
+
 You can then use the header and footer templates in the email templates as desired. Header and footer are globally active; changes you make to the header and footer affect the rest of all existing templates and all other templates that you will create in the future.
 
-The header, the footer and the settings in the template such as the name, the subject etc. form the framework of your email, so to say. The content of the template is formed with xref:crm:emailbuilder-testphase.adoc#insert-widget[widgets] and xref:crm:emailbuilder-testphase.adoc#variables-emailbuilder[variables]. In the emails that are sent to your customer, the variables will then be replaced with the correct content. For example: The variable `Delivery address First name and last name` will be replaced in the email with the first name and the last name of the contact from the delivery address.
+The header, the footer and the settings in the template such as the name, the subject etc. form the framework of your email, so to say. The content of the template is formed with <<#insert-widgets, widgets>> and <<#variables-emailbuilder, variables>>. In the emails that are sent to your customer, the variables will then be replaced with the correct content. For example: The variable `Delivery address First name and last name` will be replaced in the email with the first name and the last name of the contact from the delivery address.
 
-In case of certain events, e.g. if a new order is placed in your plentyShop or when a contact subscribes to a newsletter, your plentymarkets system <<#automate-email-despatch, automatically creates emails from these templates>> and sends them to your contacts.
+In case of certain events, e.g. if a new order is placed in your plentyShop or when a contact subscribes to a newsletter, your plentymarkets system automatically <<#automate-email-despatch, creates emails from these templates>> and sends them to your contacts.
 
 [#preparatory-settings]
 == Carrying out the preparatory settings
@@ -65,7 +70,8 @@ Saving the email server’s login details:
 *_Important:_* The test mode is only applied to this online shop. The settings for additional clients (shops) are carried out in the client’s menu.
 
 | *Name of sender*
-|Enter your name or the name of the online shop. The name is displayed to the recipient. Avoid using special characters in order to allow for correct display.
+|Enter your own name or the name of your plentyShop. The name is displayed to the recipient. +
+*_Note:_* Avoid using special characters in order to allow for correct display.
 
 | *Email address*
 |Enter the email address as it is listed in the email programme.
@@ -134,7 +140,7 @@ Creating a folder:
 . Click in the bottom left on icon:plus[role="green"] *New main folder*. +
 → The *Create new folder* window opens.
 . Enter the name for the folder.
-. *Save* the settings. +
+. Click on *Save*. +
 → The new folder is added to the folder list.
 
 [TIP]
@@ -177,7 +183,7 @@ Creating a sub-folder:
 . Click on icon:plus[] *New sub-folder*. +
 → The *Create new folder* window opens.
 . Enter the name for the sub-folder.
-. *Save* the settings. +
+. Click on *Save*. +
 → The sub-folder is created within the main folder.
 
 Open the sub-folder by opening the main folder with a click on icon:chevron_right[set=material]. You can see all sub-folders that you created at a glance.
@@ -317,7 +323,7 @@ Creating a template:
 [TIP]
 .Email templates are sent in multipart format
 ====
-The email templates in the EmailBuilder use the multipart format. This means that the emails are sent in an HTML and in a text version at the same time.  +
+The email templates in the EmailBuilder use the multipart format. This means that the emails are sent in an HTML and in a text version at the same time. +
 This ensures that your emails can be read by all recipients, even if their email client restricts or completely disables the display of HTML in emails. On the other hand, the HTML versions of your emails designed by you are displayed for the recipients whose email client allows the display of HTML. The advantage for you is that you only have to maintain one template.
 ====
 
@@ -344,7 +350,7 @@ This ensures that your emails can be read by all recipients, even if their email
 2+^|[#intable-template-settings-content]*Content*
 2+^| Click on icon:edit[set=material] to edit the content of the template and to use <<#insert-widget, widgets>> and <<#variables-emailbuilder, variables>>. +
 The editor area opens and you can edit the content of the template by clicking on the widgets. +
-The email templates use the multipart format. This means that the emails are sent in an HTML and in a text version at the same time.
+The email templates in the EmailBuilder use the multipart format. This means that the emails are sent in an HTML and in a text version at the same time.
 
 |[#intable-template-settings-default-template]*Build from default template*
 |Expand the area (icon:caret-down[]) to select one of the <<#use-default-templates, default templates>> and to link it with the new template.
@@ -397,7 +403,7 @@ The list contains all <<#create-footer, footers>> that you have already created.
 *_Font size:_* Enter `font-size:` in this field followed by the desired font size in pixel, e.g. `font-size:20px;`. +
 *_Font weight:_* Enter `font-weight:` in this field followed by the desired font weight, e.g. `font-weight:700;`. +
 *_Text alignment:_* Enter `text-align:center;` in this field if the text should be placed in the middle. Enter `text-align:right;` if the text should be aligned on the right. +
-*_Background image:_* Enter `background-image: url(_link_to_image_)` in this field and replace `_link_to_image_` with the corresponding image link to show a background image in your template. +
+*_Background image:_* Enter `background-image: url(_link_to_image_);` in this field and replace `_link_to_image_` with the corresponding image link to show a background image in your template. +
 *_Text frame:_* Enter e.g. `border: 1px solid blue;` in this field to insert a blue frame with 1px around the text. +
 *_Inner margin:_* Enter `padding:10px;` in this field if the margin should be 10px on all sides. Enter `padding: 10px 20px;` if the margin should be 10px on the top and bottom and 20px on the left and right sides. +
 *_Note:_* If you want to save multiple CSS stylings for the template, enter all values one behind the other, separated by a semicolon. +
@@ -405,7 +411,7 @@ The list contains all <<#create-footer, footers>> that you have already created.
 
 |====
 
-Now structure the content of your email by inserting variables via the widgets. How to proceed is described in the following chapter xref:crm:insert-widget.adoc#[Inserting a widget into a template].
+Now structure the content of your email by inserting variables via the widgets. How to proceed is described in the following chapter <<#insert-widget, Inserting a widget into a template>>.
 
 [#insert-widget]
 === Inserting a widget into a template
@@ -457,18 +463,22 @@ Click on icon:code[role="darkGrey"] to open the view.
 Click on icon:settings[set=material] to open the settings. Here, you can remove the widget by clicking on *Delete widget* (icon:delete[set=material]). Further settings cannot be carried out in this area. Click on *Close settings* (icon:times[]) to close the settings.
 
 |[#intable-widget-contact-address]*Contact address*
-|This widget contains sample data of the contact address. The layout of the address depends on the settings that you saved in the *Setup » CRM » Address layout* menu. This means: The layout in the EmailBuilder is displayed in the same way as the address layout that you defined as the standard address layout in the *Setup » CRM » Address layout* menu.
+|This widget contains sample data of the contact address. The layout of the address depends on the settings that you saved in the *Setup » CRM » Address layout* menu. This means: The layout in the EmailBuilder is displayed in the same way as the address layout that you defined as the xref:crm:preparatory-settings.adoc#[standard address layout] in the *Setup » CRM » Address layout* menu.
 
 Click on icon:settings[set=material] to open the settings. Select the address type *Invoice address* or *Delivery address* from the drop-down list.
 
 Click on *Close settings* (icon:times[]) to close the settings. Click on *Delete widget* (icon:delete[set=material]) to remove the widget.
+
+*_Note:_* You can find all addresses that are saved for the contact in the contact data record in the xref:crm:edit-contact.adoc#addresses[Addresses] area. The contact’s primary delivery and invoice address are saved in the contact data record in the xref:crm:edit-contact.adoc#primary-address[Primary address] area.
 
 |[#intable-widget-order-address]*Order address*
-|This widget contains sample data of the order address. The layout of the address depends on the settings that you saved in the *Setup » CRM » Address layout* menu. This means: The layout in the EmailBuilder is displayed in the same way as the address layout that you defined as the standard address layout in the *Setup » CRM » Address layout* menu.
+|This widget contains sample data of the order address. The layout of the address depends on the settings that you saved in the *Setup » CRM » Address layout* menu. This means: The layout in the EmailBuilder is displayed in the same way as the address layout that you defined as the xref:crm:preparatory-settings.adoc#[standard address layout] in the *Setup » CRM » Address layout* menu.
 
 Click on icon:settings[set=material] to open the settings. Select the address type *Invoice address* or *Delivery address* from the drop-down list.
 
 Click on *Close settings* (icon:times[]) to close the settings. Click on *Delete widget* (icon:delete[set=material]) to remove the widget.
+
+*_Note:_* You can find all addresses that are saved for the contact in the contact data record in the xref:crm:edit-contact.adoc#addresses[Addresses] area. The contact’s primary delivery and invoice address are saved in the contact data record in the xref:crm:edit-contact.adoc#primary-address[Primary address] area.
 
 |[#intable-widget-order-items]*Order items*
 |This widget contains an already pre-defined layout for the order items with sample data. The sample data will then be replaced with the correct values in the email. <<#image-emailbuilder-widget-order-items>> shows the standard widget with further settings options. 
@@ -511,16 +521,6 @@ Inserting a widget into a template:
 ==== Showing the preview of the widget
 
 Check the widget by opening the preview.
-
-[TIP]
-.Email templates are sent in multipart format
-====
-The email templates in the EmailBuilder use the multipart format. This means that the emails are sent in an HTML and in a text version at the same time.  +
-This ensures that your emails can be read by all recipients, even if their email client restricts or completely disables the display of HTML in emails. On the other hand, the HTML versions of your emails designed by you are displayed for the recipients whose email client allows the display of HTML. The advantage for you is that you only have to maintain one template.
-====
-
-[.instruction]
-Showing the preview:
 
 . Go to *CRM » EmailBuilder (Test phase)*.
 . Expand the folder (icon:chevron_right[set=material]) that contains the template for which you want to show the preview.
@@ -570,7 +570,7 @@ If you later edit multiple templates in the editor at the same time, you can use
 
 [[image-emailbuilder-example-default-template]]
 .Example: Default template *Order: Shipping confirmation*
-image::crm:emailbuilder-example-default-template-shipping-confirmation.png[width=640, height=360]
+image::crm:emailbuilder-example-default-template.png[width=640, height=360]
 
 Would you like to know which default templates are already available in the EmailBuilder and how their subjects are? Simply expand the following area by clicking on icon:expand_more[set=material].
 
@@ -578,46 +578,6 @@ Would you like to know which default templates are already available in the Emai
 [.collapseBox]
 .Default templates in the EmailBuilder and their subjects
 --
-
-*German default templates in the EmailBuilder and their subjects*
-
-[[table-default-templates-german]]
-.German default templates in the EmailBuilder and their subjects
-[cols="2,2"]
-|====
-|German template |Subject
-
-|Auftrag: Änderung
-|Auftragsänderung Ihrer Bestellung mit der ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
-
-|Auftrag: Teilzahlung erhalten
-|Teilzahlung für Auftrags-ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125; erhalten
-
-|Auftrag: Versandbestätigung
-|Versandbestätigung für Ihre Bestellung mit der ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
-
-|Auftrag: Zahlungseingang vollständig
-|Zahlung für Auftrag &#123;&#8288;&#123;order.id&#125;&#8288;&#125; vollständig erhalten
-
-|eBay: Disput / Storno, keine Zahlung
-|Ihre Bestellung mit der ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125; wurde storniert
-
-|eBay: Eingangsbestätigung Bestellung
-|eBay-Auktion gewonnen: Auftrags-ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
-
-|eBay: Eingangsbestätigung mit Bankdaten ohne Checkout
-|Eingangsbestätigung zum eBay-Auftrag mit der ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
-
-|Shop: Neues Passwort
-|Ihre angeforderten Zugangsdaten zu unserem Webshop
-
-|Shop: Newsletter-Anmeldung
-|Bestätigung zur Newsletter-Anmeldung
-
-|Shop: Eingangsbestätigung Bestellung
-|Auftragsbestätigung für Auftrags-ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
-
-|====
 
 *English default templates in the EmailBuilder and their subjects*
 
@@ -659,12 +619,62 @@ Would you like to know which default templates are already available in the Emai
 
 |====
 
+*German default templates in the EmailBuilder and their subjects*
+
+[[table-default-templates-german]]
+.German default templates in the EmailBuilder and their subjects
+[cols="2,2"]
+|====
+|German template |Subject
+
+|Auftrag: Änderung
+|Auftragsänderung Ihrer Bestellung mit der ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
+
+|Auftrag: Teilzahlung erhalten
+|Teilzahlung für Auftrags-ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125; erhalten
+
+|Auftrag: Versandbestätigung
+|Versandbestätigung für Ihre Bestellung mit der ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
+
+|Auftrag: Zahlungseingang vollständig
+|Zahlung für Auftrag &#123;&#8288;&#123;order.id&#125;&#8288;&#125; vollständig erhalten
+
+|eBay: Disput / Storno, keine Zahlung
+|Ihre Bestellung mit der ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125; wurde storniert
+
+|eBay: Eingangsbestätigung Bestellung
+|eBay-Auktion gewonnen: Auftrags-ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
+
+|eBay: Eingangsbestätigung mit Bankdaten ohne Checkout
+|Eingangsbestätigung zum eBay-Auftrag mit der ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
+
+|Shop: Neues Passwort
+|Ihre angeforderten Zugangsdaten zu unserem Webshop
+
+|Shop: Newsletter-Anmeldung
+|Bestätigung zur Newsletter-Anmeldung
+
+|Shop: Eingangsbestätigung Bestellung
+|Auftragsbestätigung für Auftrags-ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
+
+|====
+
 --
 
 [#template-show-preview]
 === Showing the preview of the template
 
 Check the email template by opening the preview.
+
+[TIP]
+.Email templates are sent in multipart format
+====
+The email templates in the EmailBuilder use the multipart format. This means that the emails are sent in an HTML and in a text version at the same time. +
+This ensures that your emails can be read by all recipients, even if their email client restricts or completely disables the display of HTML in emails. On the other hand, the HTML versions of your emails designed by you are displayed for the recipients whose email client allows the display of HTML. The advantage for you is that you only have to maintain one template.
+====
+
+[.instruction]
+Showing the preview:
 
 . Go to *CRM » EmailBuilder (Test phase)*.
 . Expand the folder (icon:chevron_right[set=material]) that contains the template for which you want to show the preview.
@@ -735,7 +745,7 @@ Learn in the following sub-chapters which variables are available and which twig
 [#available-variables]
 === Available variables
 
-The available variables for the EmailBuilder are grouped into different categories and sub-categories:
+The available variables for the EmailBuilder are grouped into the following categories and sub-categories: Click on an entry in the list to be directly forwarded to the area where the variables and the corresponding twig expressions for the respective category or sub-category are listed.
 
 * <<#variables-order, Order>>
 
@@ -756,8 +766,6 @@ The available variables for the EmailBuilder are grouped into different categori
 
 * <<#variables-newsletter, Newsletter>>
 
-Do you want to know which variables are available for the individual categories and sub-categories and how the twig expressions are called that you can use in the code widget in the template’s subject line? Simply expand the corresponding areas below by clicking on icon:expand_more[set=material].
-
 [#twig-introduction]
 === Twig expressions for the code widget and the subject line
 
@@ -773,11 +781,11 @@ If you want to use a twig expression in the template’s subject line, this expr
 [#twig-code-widget]
 ==== Twig expression in the code widget
 
-If you use link:https://twig.symfony.com/doc/3.x/tags/if.html[if queries^] in your code widget, for example, there is no need to insert double curly brackets in the if query itself, but in the body text. For further information about twig, refer to the link:https://twig.symfony.com/doc/3.x/[Twig Documentation^].
+If you use link:https://twig.symfony.com/doc/3.x/tags/if.html[if queries^] in your code widget, for example, there is no need to insert double curly brackets in the if query itself, but in the body text. For further information about twig, refer to the link:https://twig.symfony.com/doc/3.x/[Twig documentation^].
 
 In the <<#code-examples-code-widget, Code examples for the code widget>> chapter, you can find some if queries that you can simply copy to your code widget.
 
-Do you want to know which variables are available for the individual categories and sub-categories and how the twig expressions are called that you can use in the code widget? Simply expand the following areas by clicking on icon:expand_more[set=material].
+Do you want to know which variables are available for the individual categories and sub-categories and how the twig expressions are called that you can use in the code widget? Simply expand the following areas (icon:expand_more[set=material]).
 
 [#variables-order]
 [.collapseBox]
@@ -862,7 +870,7 @@ The QR code is shown as an URL in the email of your customers. After clicking on
 | `order.formattedDocuments.invoice`
 
 | `Number of packages`
-|Returns the number of packages contained in the order.
+|Shows the number of packages contained in the order.
 | `order.package`
 
 | `Total invoice amount, net`
@@ -1265,7 +1273,7 @@ The QR code is shown as an URL in the email of your customers. After clicking on
 
 | `Order property value`
 |
-| `orderItem.formattedOrderProperty.value
+| `orderItem.formattedOrderProperty.value`
 
 | `Gross price`
 |
@@ -1944,7 +1952,7 @@ For example, you can use filters to trigger a procedure once a contact has place
 [#email-despatch-to-multiple-email-addresses]
 === Email despatch to multiple email addresses
 
-Go to *Setup » Orders » Events* to set up an xref:automation:event-procedures.adoc#[event procedure] that will send an email to your customers and employees when the event that you determined occurs.
+Go to *Setup » Orders » Events* to set up an xref:automation:event-procedures.adoc#[event procedure] that will send an email to your customers and employees when the event that you determined occurs in your plentyShop.
 
 Add in the event procedure the procedure *Customer > Send email* and select the appropriate template as well as the recipients to send the email to multiple recipients at the same time once the selected event occurs.
 
